--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-  <form action="">
+  <form action="get.njs" method="GET">
     <input name="name" placeholder="your name" type="text">
     <button type="submit">Submit</button>
   </form>
