Add name search function
Fetch student id from website,
search in name list and return
name.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <body>
   <form action="get.njs" method="GET">
-    <input name="name" placeholder="your name" type="text">
+    <input name="id" placeholder="your id number" type="text">
     <button type="submit">Submit</button>
   </form>
 </body>
