--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
 </head>
 
 <body>
+  <h1>Student id info</h1>
+  <h3>* E14023234, Jerry</h3>
+  <h3>* E12345678, dirty</h3>
   <form action="get.njs" method="GET">
+    <h1>GET: </h1>
     <input name="id" placeholder="your id number" type="text">
     <button type="submit">Submit</button>
   </form>
