--- a/index.html
+++ b/index.html
@@ -8,9 +8,15 @@
   <h1>Student id info</h1>
   <h3>* E14023234, Jerry</h3>
   <h3>* E12345678, dirty</h3>
+  <h3>* E14021012, Paul</h3>
   <form action="get.njs" method="GET">
     <h1>GET: </h1>
     <input name="id" placeholder="your id number" type="text">
+    <button type="submit">Submit</button>
+  </form>
+  <form action="post.njs" method="POST">
+    <h1>POST: </h1>
+    <input name="id" placeholder="your id numver" type="text">
     <button type="submit">Submit</button>
   </form>
 </body>
