Add new student

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <h3>* E14023234, Jerry</h3>
   <h3>* E12345678, dirty</h3>
   <h3>* E14021012, Paul</h3>
+  <h3>* P38031020, Ming-Hong</h3>
   <form action="get.njs" method="GET">
     <h1>GET: </h1>
     <input name="id" placeholder="your id number" type="text">
